src/components/classifieds-category-select/classifieds-category-select.scss
.classifieds-category-select-wrapper {
  .category-cont {
    margin: 30px 0 0 !important;
    .category-list {
      box-shadow: $shadow-small;
      font-weight: 700;
      min-height: 4rem;
      display: flex;
      align-items: center;
      justify-content: center;
      flex-direction: column;
      border-radius: 5px;
      cursor: pointer;
      transition: 0.3s ease;
      padding: 10px 15px;
      word-break: break-word;
      text-align: center;
      color: rgba($black, 0.8);
      padding: 30px 0;
      font-size: 1.1rem;
      &:hover {
        color: $purple;
        box-shadow: $shadow-purple;
      }
      img {
        max-height: 40px;
        margin-bottom: 10px;
      }
    }
  }

  @media screen and (max-width: 991px) {
    padding-right: 35px;

    .category-cont {
      padding-right: 0;
      margin: 20px 0 0 !important;
      .category-list {
        padding: 20px;
        font-size: 0.9rem;
        img {
          max-height: 30px;
        }
      }
    }
  }
}

